[GOHW-3] правки - в бд добавлены лимиты

--- a/config/config_local.example.yaml
+++ b/config/config_local.example.yaml
@@ -1,4 +1,4 @@
 token: sometokensometokensometokensometoken
 fixer-api-token: sometokensometokensometokensometoken
 
-dbUri: someuri://someuri:port/db
+dbUri: postgresql://user:pass@pg:5432/db
