--- a/config/config_prod.example.yaml
+++ b/config/config_prod.example.yaml
@@ -1,4 +1,4 @@
 token: 5728053506:AAGuCxOnYzIDCY-pkaU5bIy-Z0cKclWcTT0
 fixer-api-token: KThUp0CyBzGdrhyRwfZbDaw7JyXotqPV
 
-dbUri: postgresql://finance-user:finance-pass@pg:5432/finance?sslmode=disable
+dbUri: postgresql://user:pass@pg:5432/db
