--- a/test_data/fixtures/get_user_purchases_sum_from_month.yml
+++ b/test_data/fixtures/get_user_purchases_sum_from_month.yml
@@ -2,6 +2,9 @@ users:
   - id: 123
     curr: "RUB"
     month_limit: -1
+  - id: 234
+    curr: "RUB"
+    month_limit: -1
 
 categories:
   - id: 1
@@ -10,6 +13,9 @@ categories:
   - id: 2
     user_id: 123
     category_name: "some category 2"
+  - id: 3
+    user_id: 234
+    category_name: "some category 3"
 
 purchases:
   - id: 1 # эта трата должна войти в первый кейс
@@ -36,7 +42,7 @@ purchases:
     usd_ratio: 0.5
     cny_ratio: 0.5
 
-  - id: 4
+  - id: 4 # эта трата должна войти в первый кейс
     category_id: 2
     sum: 100
     ts: "2022-11-27"
@@ -84,10 +90,26 @@ purchases:
     usd_ratio: 0.5
     cny_ratio: 0.5
 
-  - id: 10
+  - id: 10 # эта трата должна войти во второй кейс
     category_id: 2
     sum: 100
     ts: "2022-12-17"
+    eur_ratio: 0.5
+    usd_ratio: 0.5
+    cny_ratio: 0.5
+
+  - id: 11
+    category_id: 3 # трата другого юзера не должна войти
+    sum: 100
+    ts: "2022-12-17"
+    eur_ratio: 0.5
+    usd_ratio: 0.5
+    cny_ratio: 0.5
+
+  - id: 12
+    category_id: 3 # трата другого юзера не должна войти
+    sum: 100
+    ts: "2022-11-03"
     eur_ratio: 0.5
     usd_ratio: 0.5
     cny_ratio: 0.5
