--- a/test_data/fixtures/categories.yml
+++ b/test_data/fixtures/categories.yml
@@ -1,3 +1,4 @@
 - id: 1
-  user_id: 123
+  category_name: "Не заданная категория" # фикстуры затрут таблицу, поэтому нужно добавить значение заново
+- id: 2
   category_name: "some category"
