[GOHW-3] правки - добавление статусов пользователям - заведен редис

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,13 @@ services:
     ports:
       - "5432:5432"
 
+  redis:
+    image: 'bitnami/redis:latest'
+    env_file:
+      - config/redis.env
+    ports:
+      - "6379:6379"
+
   tgbot:
     volumes:
       - ./config:/config
@@ -17,5 +24,7 @@ services:
     restart: unless-stopped
     depends_on:
       - pg
+      - redis
     links:
       - pg
+      - redis
