--- a/config/config_local.example.yaml
+++ b/config/config_local.example.yaml
@@ -2,3 +2,5 @@ token: sometokensometokensometokensometoken
 fixer-api-token: sometokensometokensometokensometoken
 
 dbUri: postgresql://user:pass@pg:5432/db
+redisUri: host:post
+redisPass: "r_pass"
