[GOHW-5] настройка инфраструктуры в докере

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 version: "3.9"
 services:
+  # ------------APP----------
   pg:
     image: postgres:latest
     env_file:
@@ -25,6 +26,95 @@ services:
     depends_on:
       - pg
       - redis
+      - filed
+      - grafana
+      - jaeger
     links:
       - pg
       - redis
+
+  # ------------LOGS----------
+  filed:
+    command: /file.d/file.d --config config.yaml
+    image: ozonru/file.d:latest-linux-amd64
+    volumes:
+      - ./logs/data/log.txt:/tmp/logs/log.txt
+      - ./logs/data/offsets.yaml:/tmp/offsets.yaml
+      - ./logs/filed.yml:config.yaml
+    links:
+      - graylog
+    depends_on:
+      - graylog
+  mongodb:
+    image: mongo:3
+    volumes:
+      - ./logs/data/mongo:/data/db
+  elasticsearch:
+    image: elasticsearch:7.17.6
+    # volumes:
+    #   - ./logs/data/elastic:/usr/share/elasticsearch/data
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+  graylog:
+    image: graylog/graylog:4.3
+    volumes:
+      - ./logs/graylog.conf:/usr/share/graylog/data/config/graylog.conf
+    environment:
+      # (must be at least 16 characters)
+      - GRAYLOG_PASSWORD_SECRET=EabOdthinPafivup
+      # Password: admin
+      - GRAYLOG_ROOT_PASSWORD_SHA2=8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
+      - GRAYLOG_HTTP_BIND_ADDRESS=0.0.0.0:7555
+      - GRAYLOG_HTTP_EXTERNAL_URI=http://127.0.0.1:7555/
+    links:
+      - mongodb:mongo
+      - elasticsearch
+    depends_on:
+      - mongodb
+      - elasticsearch
+    ports:
+      # Graylog web interface and REST API
+      - 7555:7555
+      # Syslog TCP
+      - 8514:8514
+      # Syslog UDP
+      - 8514:8514/udp
+      # GELF TCP
+      - 12201:12201
+
+  # ------------METRICS----------
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - 9090:9090
+    volumes:
+      - ./metrics/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./metrics/alerts.yml:/etc/prometheus/alerts.yml
+    extra_hosts:
+      - host.docker.internal:host-gateway
+  grafana:
+    image: grafana/grafana-oss
+    ports:
+      - 3000:3000
+    volumes:
+      - ./metrics/data:/var/lib/grafana
+    links:
+      - prometheus
+    depends_on:
+      - prometheus
+
+  # ------------TRACING----------
+  jaeger:
+    image: jaegertracing/all-in-one:1.18
+    ports:
+      - 5775:5775/udp
+      - 6831:6831/udp
+      - 6832:6832/udp
+      - 5778:5778
+      - 16686:16686 # web
+      - 14268:14268
+      - 9411:9411
+
+
