[GOHW-5] правки в настройки запуска

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,12 +26,13 @@ services:
     depends_on:
       - pg
       - redis
-      - filed
-      - grafana
-      - jaeger
+#      - filed
+#      - grafana
+#      - jaeger
     links:
       - pg
       - redis
+#      - graylog
 
   # ------------LOGS----------
   filed:
