--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,11 +28,10 @@ services:
       - redis
 #      - filed
       - grafana
-#      - jaeger
+      - jaeger
     links:
       - pg
       - redis
-#      - graylog
 
   # ------------LOGS----------
 #  filed:
@@ -105,17 +104,17 @@ services:
       - prometheus
     depends_on:
       - prometheus
-#
-#  # ------------TRACING----------
-#  jaeger:
-#    image: jaegertracing/all-in-one:1.18
-#    ports:
-#      - 5775:5775/udp
-#      - 6831:6831/udp
-#      - 6832:6832/udp
-#      - 5778:5778
-#      - 16686:16686 # web
-#      - 14268:14268
-#      - 9411:9411
-#
-#
+
+  # ------------TRACING----------
+  jaeger:
+    image: jaegertracing/all-in-one:1.18
+    ports:
+      - 5775:5775/udp
+      - 6831:6831/udp
+      - 6832:6832/udp
+      - 5778:5778
+      - 16686:16686 # web
+      - 14268:14268
+      - 9411:9411
+
+
