--- a/metrics/prometheus.yml
+++ b/metrics/prometheus.yml
@@ -15,3 +15,4 @@ scrape_configs:
     static_configs:
       - targets: 
         - "host.docker.internal:8080"
+        - "host.docker.internal:8081"
