--- a/config/config_local.example.yaml
+++ b/config/config_local.example.yaml
@@ -5,4 +5,5 @@ dbUri: postgresql://user:pass@pg:5432/db
 redisUri: host:post
 redisPass: "r_pass"
 
-grpc-host-messages: "localhost:50051"
+grpc-host-messages: "localhost"
+grpc-port-messages: 50051
